Fix frontpage font alignment

--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -8,7 +8,6 @@
     text-shadow: 0 1px 0 @shadow-color;
     font-weight: 500;
     letter-spacing: 0.05em;
-    font-family: @sans;
     margin-top: 0.5em;
     color: @faded-mid;
     span {
@@ -73,12 +72,11 @@
 
       &:after {
         content: "/";
-        font-family: @sans;
         font-weight: 200;
         font-size: 92%;
         position: absolute;
-        top: -2px;
-        right: -6px;
+        top: 0px;
+        right: -4px;
         color: @faded-mid-light;
       }
       &:last-child:after {
